# hacker-news-tui

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
demo/: demo.tape  record.sh
src/: api.rs  app.rs  main.rs  store.rs  ui.rs  util.rs
