[package]
name = "hacker-news-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A delightful terminal UI for browsing Hacker News"
license = "MIT"
readme = "README.md"
repository = "https://github.com/danfry1/hacker-news-tui"
homepage = "https://github.com/danfry1/hacker-news-tui"
keywords = ["hacker-news", "tui", "terminal", "ratatui", "cli"]
categories = ["command-line-utilities"]
# Keep the published crate lean — the demo GIF and CI config aren't needed to build.
exclude = ["demo/", ".github/", "CHANGELOG.md"]

# Supply-chain notes:
# - Direct dependencies are pinned to a minor series; `Cargo.lock` (committed) locks
#   every transitive crate to an exact version + checksum for reproducible builds.
# - TLS is pure-Rust `rustls` (no system OpenSSL linkage / native-tls).
# - Dependency surface is kept deliberately small — no `open`/`html-escape`; those
#   are a few lines of std in `src/util.rs` instead.
[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
